# HotStuff

./: Cargo.toml  Makefile  docker-compose.yml
crates/hotstuff/: Cargo.toml
crates/hotstuff-testing/: Cargo.toml
crates/hotstuff-testing/src/: bootnode_init_and_stabilize.rs  docker.rs  harness.rs  main.rs  simple_message.rs  traits.rs
crates/hotstuff/src/: async_helpers.rs  block.rs  crypto.rs  lib.rs  node.rs
crates/hotstuff/src/http/: codec.rs  mod.rs
crates/hotstuff/src/http/codec/: mod.rs  request.rs  response.rs
crates/hotstuff/src/node/: config.rs  message.rs  mod.rs
docker/: node.Dockerfile
scripts/: make_network.py
src/: block.rs  crypto.rs  lib.rs  main.rs  node.rs
