[package]
name = "hotstuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
digest = "0.10.7"
serde = { version = "1.0.196", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
