[package]
name = "hotstuff-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive", "env"] }
anyhow = { workspace = true }
serde_yaml = "0.9.32"
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
